<resources>
    <string name="app_name">AppMarket</string>
    <string name="sign_in">Войти</string>
    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>
    <string name="error_input">Поле заполнено неверно</string>
    <string name="catalog_title">Каталог</string>
    <string name="sign_in_unexpected_error">Произошла непредвиденная ошибка.\nПожалуйста, попробуйте позже.</string>
    <string name="product_item_buy_action">Купить</string>
    <string name="refresh">Обновить</string>
    <string name="errorTitle">Произошла непредвиденная ошибка</string>
    <string name="profile">Профиль</string>
    <string name="price_format">%s ₽</string>
    <string name="buy_now">Купить сейчас</string>
    <string name="product_size_hint">Размер</string>
    <string name="order">Оформление заказа</string>
    <string name="buy_order">КУПИТЬ ЗА %s ₽</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="dateOrder">Дата доставки</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="Quantity">1</string>
    <string name="no_size">Выберите размер</string>
    <string name="size">XL</string>
    <string name="title">%1$s • %2$s</string>
    <string name="error_snackBar_order">Во время оформления заказа произошла ошибка</string>
    <string name="success_snackBar_order">Заказ №%1$s от %2$s был усешно оформлен</string>
    <string name="select">Выбрать</string>
    <string name="select_home">Выбор дома</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="kind_of_activity">Род деятельности</string>
    <string name="another_kind_of_activity">Другой род деятельности</string>
    <string name="refreshDataProfile">Применить</string>
    <string name="errorCamera">Предоставьте доступ к камере</string>
    <string name="errorStorage">Предоставьте доступ к памяти устройства</string>
</resources>