<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_backarrow"
        app:navigationIconTint="@color/white"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints"
        app:title="@string/order" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/product_item_image_size"
        android:layout_height="@dimen/product_item_image_size"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200"
        android:background="@drawable/standart_product_image_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/productTitle"
        style="@style/TextAppearance.Body.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_100"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/productDepartment"
        style="@style/TextAppearance.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/productTitle"
        app:layout_constraintStart_toStartOf="@+id/productTitle"
        app:layout_constraintTop_toBottomOf="@+id/productTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/houseLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_300"
        android:layout_marginEnd="@dimen/normal_100"
        android:hint="@string/house"
        app:endIconDrawable="@drawable/ic_chevron_right"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/houseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apartmentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/flat"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintEnd_toEndOf="@+id/houseLayout"
        app:layout_constraintStart_toStartOf="@+id/houseLayout"
        app:layout_constraintTop_toBottomOf="@+id/houseLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apartmentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/minus"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:layout_marginLeft="86dp"
        android:background="@drawable/variant_toggle_minus"
        android:enabled="false"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/quantity"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/quantity" />

    <TextView
        android:id="@+id/quantity"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:background="@drawable/toggle_elem"
        android:gravity="center"
        android:text="@string/Quantity"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/plus"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintTop_toTopOf="@+id/plus" />

    <TextView
        android:id="@+id/plus"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="32dp"
        android:layout_height="28dp"
        android:background="@drawable/variant_toggle_plus"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/productTitle"
        app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deliveryDateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:hint="@string/dateOrder"
        app:endIconDrawable="@drawable/ic_chevron_right"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@+id/apartmentLayout"
        app:layout_constraintStart_toStartOf="@+id/apartmentLayout"
        app:layout_constraintTop_toBottomOf="@+id/apartmentLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deliveryDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:longClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.example.lessnon3_igor.presentation.view.LoadableButton
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/normal_100"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginBottom="@dimen/normal_100" />
</androidx.constraintlayout.widget.ConstraintLayout>