<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/normal_100"
    android:layout_marginEnd="@dimen/normal_100"
    android:fitsSystemWindows="true">

    <TextView
        style="@style/TextAppearance.H1"
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        app:layout_constraintBottom_toBottomOf="@id/layoutLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/normal_200"
        android:id = "@+id/layoutLogin"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in_login_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id = "@+id/textLogin"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/normal_200"
        android:id = "@+id/layoutPassword"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in_password_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLogin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id = "@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:errorEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="@dimen/normal_300"
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"/>
    <ProgressBar
        android:id="@+id/loading"
        android:visibility="invisible"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>