<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:navigationIcon="@drawable/ic_backarrow"
        app:titleCentered="true"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/profileImg"
        android:layout_height="90dp"
        android:layout_width="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        android:background="@drawable/img_profile_default"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        android:layout_marginEnd="@dimen/normal_100"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kind_of_activity_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/normal_200"
        app:layout_constraintTop_toBottomOf="@+id/surname_layout"
        app:endIconDrawable="@drawable/ic_chevron_right"
        app:endIconMode="custom">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kind_of_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:hint="@string/kind_of_activity"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/another_kind_of_activity_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_200"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kind_of_activity_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/another_kind_of_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/another_kind_of_activity" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.example.lessnon3_igor.presentation.view.LoadableButton
        android:id="@+id/accept_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/normal_100"
        android:layout_marginStart="@dimen/normal_100"
        />
</androidx.constraintlayout.widget.ConstraintLayout>